implementado ação de excluir nas listagens da página de edição de evento

--- a/administrador/templates/administrador/listar_organizadores.html
+++ b/administrador/templates/administrador/listar_organizadores.html
@@ -62,7 +62,7 @@
                             </td>
                             <td>
                                 <a href="#" class="link" title="Excluir"
-                                   onclick="get_confirmation('Deseja realmente excluir {{ organizador }}?')">
+                                   onclick="return get_confirmation('Deseja realmente excluir {{ organizador }}?')">
                                 <span class="icon is-small is-left has-text-danger">
                                     <i class="fas fa-trash"></i>
                                 </span>
