--- a/eventos/templates/eventos/editar-palestrante.html
+++ b/eventos/templates/eventos/editar-palestrante.html
@@ -140,23 +140,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Atividade</label>
-                        </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <div class="control">
-                                    <div class="select">
-                                        <select>
-                                            <option>Select dropdown</option>
-                                            <option>With options</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+{#                    <div class="field is-horizontal">#}
+{#                        <div class="field-label is-normal">#}
+{#                            <label class="label">Atividade</label>#}
+{#                        </div>#}
+{#                        <div class="field-body">#}
+{#                            <div class="field">#}
+{#                                <div class="control">#}
+{#                                    <div class="select">#}
+{#                                        <select>#}
+{#                                            <option value="0">Selecione uma atividade</option>#}
+{#                                            {% for a in atividades %}#}
+{#                                                <option value="{{ a.pk }}">{{ a.nome }}</option>#}
+{#                                            {% endfor %}#}
+{#                                        </select>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
 
                     <div class="field is-horizontal">
                         <div class="field-label">
